<resources>
    <string name="app_name">CV</string>
    <string name="home">HOME</string>
    <string name="splash">SPLASH</string>
    <string name="login">LOGIN</string>
    <string name="loginIn">Login</string>
    <string name="password">Password</string>
    <string name="home_title">Home</string>
    <string name="settings_title">Settings</string>
    <string name="logout">Logout</string>
    <string name="emptyPasswordError">Password field can not be empty!</string>
    <string name="emptyLoginError">Login field can not be empty!</string>
    <string name="role">Role:</string>
    <string name="from">From:</string>
    <string name="main_res">Main Responsibilities:</string>
    <string name="date_to">To:</string>
</resources>