<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/guidelineCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textLogin"
        android:layout_width="@dimen/size_300"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_5"
        android:hint="@string/loginIn"
        app:endIconMode="clear_text"
        app:layout_constraintBottom_toTopOf="@id/guidelineCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textLoginEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineCenter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".5" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textPassword"
        android:layout_width="@dimen/size_300"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_5"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        app:errorEnabled="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guidelineCenter">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="@dimen/size_300"
        android:layout_height="wrap_content"
        android:text="@string/loginIn"
        android:layout_marginTop="@dimen/margin_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>