<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/margin_16">

    <ImageView
        android:id="@+id/imageDetailsLogo"
        android:layout_width="@dimen/image_size_200"
        android:layout_height="@dimen/image_size_200"
        android:layout_marginTop="@dimen/margin_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelDetailsCompanyName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        android:gravity="center"
        android:textSize="@dimen/text_size_22"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageDetailsLogo" />

    <TextView
        android:id="@+id/labelDetailsRoleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/role"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelDetailsCompanyName" />

    <TextView
        android:id="@+id/labelDetailsCompanyRole"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintBottom_toBottomOf="@id/labelDetailsRoleText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/labelDetailsRoleText"
        app:layout_constraintTop_toTopOf="@id/labelDetailsRoleText" />

    <TextView
        android:id="@+id/labelDetailsFromText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/margin_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelDetailsCompanyRole" />

    <TextView
        android:id="@+id/labelDetailsDateFrom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintBottom_toBottomOf="@+id/labelDetailsFromText"
        app:layout_constraintStart_toEndOf="@id/labelDetailsFromText"
        app:layout_constraintTop_toTopOf="@id/labelDetailsFromText" />

    <TextView
        android:id="@+id/labelDetailsToText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold"
        android:text="@string/date_to"
        android:layout_marginTop="@dimen/margin_10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelDetailsFromText" />

    <TextView
        android:id="@+id/labelDetailsDateTo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintBottom_toBottomOf="@+id/labelDetailsToText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/labelDetailsToText"
        app:layout_constraintTop_toTopOf="@id/labelDetailsToText" />

    <TextView
        android:id="@+id/labelDetailsMainResText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/black"
        android:textSize="@dimen/text_size_16"
        android:textStyle="bold"
        android:text="@string/main_res"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelDetailsToText" />

    <TextView
        android:id="@+id/labelDetailsMainResponsibilities"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_16"
        android:layout_marginTop="@dimen/margin_10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelDetailsMainResText" />

    <TextView
        android:id="@+id/labelDetailsAchievements"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/labelDetailsMainResponsibilities" />

</androidx.constraintlayout.widget.ConstraintLayout>